--- a/docs/posts/04wk-1.out.ipynb
+++ b/docs/posts/04wk-1.out.ipynb
@@ -17,11 +17,11 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "98de1e1f-acbf-42c5-9703-297b7586b6be"
+      "id": "ff408ab4-b6ac-49a9-858e-5e2d2d17c0ad"
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "tags": []
       },
@@ -31,9 +31,9 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
-        "#from fastai.data.all import *\n",
-        "#import torchvision\n",
-        "#import pathlib"
+        "# from fastai.data.all import *\n",
+        "# import torchvision\n",
+        "# import pathlib"
       ],
       "id": "aa01caab-3fbc-4508-a78d-f2825c6821b2"
     },
@@ -52,7 +52,7 @@
         "\n",
         "`-` 맞춰봐"
       ],
-      "id": "c8b4f71d-a5f8-448e-9b20-9641666a17cf"
+      "id": "17f484e9-57b5-44d4-8c6f-506f1f84e15c"
     },
     {
       "cell_type": "code",
@@ -106,7 +106,7 @@
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,256)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,256)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$$"
       ],
-      "id": "aa4a54e7-6fe4-447b-8999-84c304ff3c86"
+      "id": "49450ddf-8cb3-45c3-a446-7b4fa8341fd8"
     },
     {
       "cell_type": "code",
@@ -182,7 +182,7 @@
         "\n",
         "[1] 2024년 수능 미적30번 문제에 나온 함수응용"
       ],
-      "id": "f0d0921c-13d5-46fc-97c1-1ab0c6330f7e"
+      "id": "1242fad8-b812-4615-88d2-2ec8cc1baf00"
     },
     {
       "cell_type": "code",
@@ -231,7 +231,7 @@
         "\n",
         "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,1024)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,1024)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$"
       ],
-      "id": "db4d83f8-b9d7-47d2-a8cf-bc49c227fbc5"
+      "id": "19801345-d99e-4a53-8c1c-ec721ed6da8a"
     },
     {
       "cell_type": "code",
@@ -331,7 +331,7 @@
         "\n",
         "`-` 데이터"
       ],
-      "id": "f8699c9d-655b-4574-a30d-e84108f43fde"
+      "id": "d49d9fad-8d60-46f6-98a6-cf3da4774fdf"
     },
     {
       "cell_type": "code",
@@ -352,7 +352,7 @@
         "`-` 아래와 같은 네트워크를 고려하자. (스펙올라도 취업못하는 예제에서\n",
         "썼던 네크워크랑 비슷해요)"
       ],
-      "id": "0acf4a29-e6cd-4a39-868a-82725d3e7854"
+      "id": "7935236b-ecb5-41a0-88ce-d96544ddc723"
     },
     {
       "cell_type": "code",
@@ -375,7 +375,7 @@
         "`-` 직관1: $l_1$,$l_2$의 가중치를 잘 결합하다보면 우연히 아래와 같이\n",
         "만들 수 있다."
       ],
-      "id": "caa5a05d-39df-4701-a5e3-bb60e10be02a"
+      "id": "73253b15-2cfc-4ec5-ba87-98e81f830714"
     },
     {
       "cell_type": "code",
@@ -441,7 +441,7 @@
       "source": [
         "`-` 직관2: 아래들도 가능할듯?"
       ],
-      "id": "25b11313-255a-409f-a6dd-cea842026759"
+      "id": "919ddd51-9d30-48c4-b586-002452adfd91"
     },
     {
       "cell_type": "code",
@@ -509,7 +509,7 @@
         "$(l_2\\circ a_1 \\circ l_1)(x)$의 결과로 주황색선 + 파란색선도 가능할 것\n",
         "같다. $\\to$ 실제로 가능함"
       ],
-      "id": "ca858062-3fcf-4f2c-b78d-93428d3e2551"
+      "id": "ff2a8415-966d-4ad8-b9bd-f3d11468a260"
     },
     {
       "cell_type": "code",
@@ -572,7 +572,7 @@
         "`-` 정리1: 2개의 시그모이드를 우연히 잘 결합하면 아래와 같은\n",
         "“1단계-계단함수” 함수 $h$를 만들 수 있다."
       ],
-      "id": "3e05638f-e0d4-4c7a-a6a6-1f9130c83027"
+      "id": "02890b41-8ede-491b-ad8d-2f88981cd986"
     },
     {
       "cell_type": "code",
@@ -630,7 +630,7 @@
         "\n",
         "`-` $h(x)$를 생성하는 클래스를 만들어보자."
       ],
-      "id": "9122c0c0-ba5c-4e10-845f-587536af1c76"
+      "id": "47ad5503-05b8-467c-a70f-2bd5f1756953"
     },
     {
       "cell_type": "code",
@@ -676,7 +676,7 @@
         "\n",
         "**예제1** – 스펙높아도 취업이 안된다고??"
       ],
-      "id": "761bfd72-11b4-4018-be8d-8c7550aee324"
+      "id": "89f40fe9-3d9f-4e3e-be5e-fb4d8f1ea679"
     },
     {
       "cell_type": "code",
@@ -762,7 +762,7 @@
       "source": [
         "**예제2** – 수능에 나왔다던 이상한 곡선..?"
       ],
-      "id": "e0fd5baa-e86e-4166-9977-f5f833c4c8b6"
+      "id": "13c8384e-497e-4760-877b-32917e73aebf"
     },
     {
       "cell_type": "code",
@@ -878,7 +878,7 @@
         "\n",
         "## A. 데이터 다운로드"
       ],
-      "id": "cc797b1e-53ba-40a7-90fa-4520c8490ba1"
+      "id": "d0ab3a2e-343d-4a2e-bdcf-29fde4d640d7"
     },
     {
       "cell_type": "code",
@@ -1019,7 +1019,7 @@
         "\n",
         "`-` `plt.imshow(...)` 에서 `...`이 shape이 (??,??)이면 흑백이미지를 출력"
       ],
-      "id": "29685935-f426-4ae5-a5e3-262d07393412"
+      "id": "c700f01f-6fb1-4f98-b758-d4cbd0076136"
     },
     {
       "cell_type": "code",
@@ -1049,7 +1049,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 shape이 (??,??,3)이면 칼라이미지를\n",
         "출력"
       ],
-      "id": "528e972b-943a-451a-b740-7c92df60bdd4"
+      "id": "039f5c36-bdee-4b71-9fcb-87075055cdb7"
     },
     {
       "cell_type": "code",
@@ -1082,7 +1082,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 자료형이 int인지 float인지에 따라서\n",
         "인식이 다름"
       ],
-      "id": "51ad2526-7b1f-4601-b6c6-45a03f563b79"
+      "id": "0ca1ac93-e32a-457c-9f12-42bbb299c168"
     },
     {
       "cell_type": "code",
@@ -1138,7 +1138,7 @@
       "source": [
         "## C. 예비학습 – pathlib"
       ],
-      "id": "045ec52b-4c9e-420a-8f5d-0abab2912c2c"
+      "id": "b33cea59-660a-4b16-a434-2ee5c49db3d6"
     },
     {
       "cell_type": "code",
@@ -1158,7 +1158,7 @@
       "source": [
         "`-` 오브젝트 생성"
       ],
-      "id": "e24b85c3-e6b4-450e-8ac2-cb0eb5f1f895"
+      "id": "505bcb17-51ae-49fd-ad84-cf74905c7831"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1180,7 @@
       "source": [
         "`-` 기능1 – `.ls()`"
       ],
-      "id": "a5c936e8-14e5-440c-9555-45acc63459ee"
+      "id": "ac0bc20e-a5c8-4c78-8062-5854654d844e"
     },
     {
       "cell_type": "code",
@@ -1202,7 +1202,7 @@
         "`-` 이미지 파일이 저장된 경로로 새로운 `path`오브젝트를 만들고 기능1\n",
         "수행"
       ],
-      "id": "32315251-22c4-4f70-b64b-80934079abd7"
+      "id": "8763c2e5-25c3-4637-8ce2-31bd8f2aa432"
     },
     {
       "cell_type": "code",
@@ -1237,7 +1237,7 @@
       "source": [
         "`-` 기능2: `/` 로 새로운 path 생성하기"
       ],
-      "id": "99ba3006-2be0-4044-b1de-737b783e5464"
+      "id": "0464190e-232a-44c7-b9ce-4c1067043ff6"
     },
     {
       "cell_type": "code",
@@ -1258,7 +1258,7 @@
       "source": [
         "`-` 기능1,2의 결합"
       ],
-      "id": "e0cae780-2331-42e6-85fe-20beb39c54ce"
+      "id": "38d03665-9adb-4347-ab20-d8f6bccb4677"
     },
     {
       "cell_type": "code",
@@ -1281,7 +1281,7 @@
         "\n",
         "`-` 데이터가 저장된 path 설정"
       ],
-      "id": "b2616375-07d0-4c4d-b34b-e18538c7ee2a"
+      "id": "f1c533bd-c99f-48f5-8118-20ef670d89e3"
     },
     {
       "cell_type": "code",
@@ -1301,7 +1301,7 @@
       "source": [
         "`-` `X` ,`y`를 만듦"
       ],
-      "id": "7529c413-5400-4d65-8097-86710c9a1389"
+      "id": "c7a8b2e3-1746-407e-86ba-fd4bb691df10"
     },
     {
       "cell_type": "code",
@@ -1387,7 +1387,7 @@
         "배우고 싶음. $\\to$ 이런건 배운적이 없는데?.. $\\to$ 그렇다면\n",
         "${\\bf X}:(n,784) \\to {\\bf y}:(n,1)$ 으로 가는 맵핑을 학습하자."
       ],
-      "id": "319d74a0-e0c1-4c32-be48-aca57adb1588"
+      "id": "62d8ef9f-a3f8-4595-b7b6-a35e3938b285"
     },
     {
       "cell_type": "code",
@@ -1409,7 +1409,7 @@
       "source": [
         "## E. 학습"
       ],
-      "id": "b4893fa9-6a3b-4d7a-bf29-5ae910c26b79"
+      "id": "8b867cf6-5cd9-49cd-a13e-5c58a38909e7"
     },
     {
       "cell_type": "code",
@@ -1472,7 +1472,7 @@
         "-   잘맞추는데?\n",
         "-   믿을수가 없는데..?"
       ],
-      "id": "f2732828-15d3-41a5-8733-6ece44204772"
+      "id": "c7e47a76-7ade-41cb-8124-f6cdc5cead64"
     },
     {
       "cell_type": "code",
@@ -1493,7 +1493,7 @@
       "source": [
         "## F. Test"
       ],
-      "id": "46356040-56cb-47de-b077-786704d00c75"
+      "id": "a83d5749-aba1-4d7f-8256-886e895aa2df"
     },
     {
       "cell_type": "code",
@@ -1646,10 +1646,73 @@
         "\n",
         "학습결과를 확인하고 accuracy를 구하라.\n",
         "\n",
+        "(풀이)"
+      ],
+      "id": "7465667b-4592-43eb-8c00-fd68bb667955"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "acc(방법1) = 0.999515950679779\n",
+            "acc(방법2) = 0.999515950679779"
+          ]
+        }
+      ],
+      "source": [
+        "## Step1 \n",
+        "path = pathlib.Path('root/.fastai/data/mnist_png')\n",
+        "X3 = torch.stack([torchvision.io.read_image(str(i)) for i in (path/'training/3').ls()],axis=0)\n",
+        "X7 = torch.stack([torchvision.io.read_image(str(i)) for i in (path/'training/7').ls()],axis=0)\n",
+        "X = torch.concat([X3,X7],axis=0).reshape(-1,28*28).float()\n",
+        "y = torch.tensor([0.0]*6131+[1.0]*6265).reshape(-1,1)\n",
+        "## Step2 \n",
+        "torch.manual_seed(43052)\n",
+        "net = torch.nn.Sequential(\n",
+        "    torch.nn.Linear(784,32),\n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.Linear(32,1),\n",
+        ")\n",
+        "loss_fn = torch.nn.BCEWithLogitsLoss()\n",
+        "optimizr = torch.optim.Adam(net.parameters())\n",
+        "## Step3 \n",
+        "for epoc in range(200):\n",
+        "    ## step1\n",
+        "    netout = net(X)\n",
+        "    ## step2\n",
+        "    loss = loss_fn(netout,y)\n",
+        "    ## step3\n",
+        "    loss.backward()\n",
+        "    ## step4\n",
+        "    optimizr.step()\n",
+        "    optimizr.zero_grad()\n",
+        "## Step4 \n",
+        "sig = torch.nn.Sigmoid()\n",
+        "print(f'acc(방법1) = {((sig(netout) > 0.5) == y).float().mean()}')\n",
+        "print(f'acc(방법2) = {((netout>0) == y).float().mean()}')"
+      ],
+      "id": "62db9d94-64e9-47a5-a3e1-1d547c49287f"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-   두번째 방법은 시그모이드 취하기전의 값이 0보다 커야, 시그모이드를\n",
+        "    취한 값이 0.5 이상이 됨을 이용한 것이다. (참고로 시그모이드 취하기\n",
+        "    전의 값이 딱 0이라면 시그모이드를 취한값은 0.5가 된다) 즉\n",
+        "    $netout>0 \\Leftrightarrow sig(netout)>0.5$를 이용한 것임.\n",
+        "\n",
         "Cybenko, George. 1989. “Approximation by Superpositions of a Sigmoidal\n",
         "Function.” *Mathematics of Control, Signals and Systems* 2 (4): 303–14."
       ],
-      "id": "20b5db0d-7e84-42d5-afd5-1bea2a99236e"
+      "id": "b19873a1-8e96-4c37-9a82-ff590994bc41"
     }
   ],
   "nbformat": 4,
