--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "402c8b9f-6438-44df-bb30-58ad1b7a2d43"
+      "id": "1999275c-065e-419d-955b-faeb810dbbcc"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "f792966c-2334-44e3-b6bc-abb53cbd7992"
+      "id": "2c9298e9-c993-4e2a-a970-efebbcd3acc5"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "37bf15ee-43eb-407d-8030-5b770c7389fd"
+      "id": "299d27f2-0541-48d1-b20e-76c4a0494787"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "a61c0b6b-7b6d-4e41-86c7-befcf1efac9d"
+      "id": "733ec8a0-3726-4c5f-8377-7b5a441c9ecf"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "ce5a0150-c88b-4b6e-953f-dfa0e7b2b966"
+      "id": "dc957068-6473-41db-8b89-40d829605ea3"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "8a7f3ebe-ab92-4009-8cdf-1df4d47007ff"
+      "id": "5fc8cf7f-eea3-401b-be6a-e54ea9929f0b"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "2cc0fd42-4614-486d-bee7-35f2a5835076"
+      "id": "4d16e1ef-405b-469a-af56-14562d74bece"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "f6c724ef-94d0-4938-8f0d-a547ffa097a0"
+      "id": "2a88e254-900c-485f-9eab-7fd234faca84"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "d71c86f1-3558-4985-899e-f726e5fa929f"
+      "id": "dce47d28-14e0-44a4-90db-467df9514d26"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "e01499ff-8aa1-4d1c-8529-b49db065c549"
+      "id": "d4f18564-0272-4d06-a94c-6f0351a96d58"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "8c50c54e-4026-446d-bf98-da3091b84bef"
+      "id": "1435850b-b4f0-4a40-92be-2c01c666a440"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "01f0e7e1-39d8-4b02-8657-f9695ff1a3b0"
+      "id": "1432d8bd-41b5-4419-b902-ea9254361f1c"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "25d739a5-bfa8-4487-bee5-4be319ea17c8"
+      "id": "bb52b65d-86f8-4297-babd-0a6cedee685c"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "f22dd042-60ec-4326-bedd-930ab48e94ce"
+      "id": "3c88a956-f178-4101-997d-4e17aaa3e48e"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "8d1de1c2-cb4c-42d3-b243-1eedb7390ee8"
+      "id": "68259787-0241-40b3-9076-d26c208c7c3d"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "1a6894e6-b579-40d9-8508-c73ec0cc04dd"
+      "id": "c4551b8f-050a-4013-83ae-17ca533c694e"
     },
     {
       "cell_type": "code",
