--- a/docs/posts/05wk-2.out.ipynb
+++ b/docs/posts/05wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "2ee592dd-8257-4a1c-95b4-79ee149bb5be"
+      "id": "f88ab856-279c-4bd4-9870-510cc66469aa"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "4e941469-a138-4596-b38a-5652eaf4a65f"
+      "id": "316b74d5-e1a9-4a80-b5c9-827f1762de91"
     },
     {
       "cell_type": "code",
@@ -58,7 +58,7 @@
         "\n",
         "`-` download data"
       ],
-      "id": "c68cf117-9e96-4001-b5ff-f34fd1625692"
+      "id": "c6bc1202-649d-40d9-91f8-0e5516d3c081"
     },
     {
       "cell_type": "code",
@@ -78,7 +78,7 @@
       "source": [
         "`-` training set"
       ],
-      "id": "5f20cd19-5240-4fca-8182-f6b496fdcd62"
+      "id": "edb5d7fe-4961-46ae-abe4-0259aac66f56"
     },
     {
       "cell_type": "code",
@@ -101,7 +101,7 @@
       "source": [
         "`-` test set"
       ],
-      "id": "6e3bc0f5-0f9d-46cb-961b-f384f1c84bc8"
+      "id": "76cdfc8a-4084-4969-a7fc-9f46654e1faf"
     },
     {
       "cell_type": "code",
@@ -151,9 +151,13 @@
         "\n",
         "## B. 새로운 아키텍처의 제시\n",
         "\n",
-        "`-` 예전\n",
+        "`-` 예전 아키텍처들\n",
         "\n",
-        "$$\\underset{(n,784)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,30)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,30)}{\\boldsymbol v^{(1)}} \\overset{l_2}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$$\n",
+        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,256)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,256)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,784)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,30)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,30)}{\\boldsymbol v^{(1)}} \\overset{l_2}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "\n",
+        "`-` 아키텍처들의 공통점?\n",
         "\n",
         "-   $l_1$: 선형변환, feature를 뽑아내는 역할 (뻥튀기 혹은 요약)\n",
         "-   $relu$: 뻥튀기된 feature에 비선형을 추가하여 표현력 극대화\n",
@@ -173,7 +177,7 @@
         "\n",
         "**(예시1)**"
       ],
-      "id": "1dd41835-c47b-48a0-b572-becfbac43362"
+      "id": "3e708968-a75e-4aec-8eff-8d8de2200bed"
     },
     {
       "cell_type": "code",
@@ -233,7 +237,7 @@
       "source": [
         "**(예시2) 잘하면 평균도 계산하겠다?**"
       ],
-      "id": "6c701ecb-238b-4338-9b25-4fdb37e036de"
+      "id": "2f176503-ab08-4610-855e-ec31d85b4c29"
     },
     {
       "cell_type": "code",
@@ -266,7 +270,7 @@
       "source": [
         "**(예시3) 이동평균?**"
       ],
-      "id": "5bfe3ad4-8c06-4726-8f1b-70d6a24b0069"
+      "id": "3972dfe2-f251-480d-b3cc-41842cc79d66"
     },
     {
       "cell_type": "code",
@@ -299,7 +303,7 @@
       "source": [
         "**(예시4) window size가 증가한다면? (2d의 이동평균느낌)**"
       ],
-      "id": "a055233c-1173-43e0-a209-66a48e276b21"
+      "id": "6c724034-a0f8-4312-859e-178b5f4f978c"
     },
     {
       "cell_type": "code",
@@ -345,7 +349,7 @@
       "source": [
         "**(예시5)** 2개의 이미지"
       ],
-      "id": "6561c1ce-0ed5-4cb8-9e1f-841e58a3e8a6"
+      "id": "e229454a-b8af-41e4-823d-b6df495b6626"
     },
     {
       "cell_type": "code",
@@ -392,7 +396,7 @@
       "source": [
         "**(예시6) 피처뻥튀기**"
       ],
-      "id": "0516ed65-28cd-44cc-8b86-755021798456"
+      "id": "edaf23b5-4010-4515-a809-ccf5392631bd"
     },
     {
       "cell_type": "code",
@@ -451,7 +455,7 @@
       "source": [
         "결국 아래를 계산한다는 의미"
       ],
-      "id": "4aa83fa7-507f-477b-b399-54841c174cdb"
+      "id": "de7df2fc-a225-4e4e-b684-bfa9f0ac7bac"
     },
     {
       "cell_type": "code",
@@ -483,7 +487,7 @@
       "source": [
         "## D. ReLU (2d)"
       ],
-      "id": "9f53ec9a-9332-4218-836b-c60aa16a892b"
+      "id": "ed7d7dc5-9a48-4854-ba3c-c3777b974b2f"
     },
     {
       "cell_type": "code",
@@ -528,7 +532,7 @@
       "source": [
         "## E. Maxpooling 레이어"
       ],
-      "id": "96cdab7b-3241-4121-bb57-a50a2da49fcb"
+      "id": "548e0e7b-893f-42f8-8069-33f45368f3fa"
     },
     {
       "cell_type": "code",
@@ -620,7 +624,7 @@
       "source": [
         "# 5. MNIST(CPU)"
       ],
-      "id": "d65e6d15-760f-4770-ac38-7e5e6b1a61c8"
+      "id": "7e376a94-7b8b-4883-9a4b-c94872d0cece"
     },
     {
       "cell_type": "code",
@@ -640,7 +644,7 @@
       "source": [
         "## A. Conv2d"
       ],
-      "id": "9ed0c9d9-7482-4f13-b664-d02960734b4d"
+      "id": "81939927-14a1-42ab-b28b-4a5c82dabb1e"
     },
     {
       "cell_type": "code",
@@ -671,7 +675,7 @@
       "source": [
         "## B. ReLU"
       ],
-      "id": "47fe6911-7db9-4010-8506-8bf376545a62"
+      "id": "9c7fd289-f83f-4037-b35c-7a798b4756d4"
     },
     {
       "cell_type": "code",
@@ -704,7 +708,7 @@
       "source": [
         "## C. MaxPool2D"
       ],
-      "id": "f4173347-9cf7-40cc-804d-195433ee50e7"
+      "id": "eb4e6371-cffd-464f-8ae8-b2d005165ca2"
     },
     {
       "cell_type": "code",
@@ -743,7 +747,7 @@
         "\n",
         "(방법1)"
       ],
-      "id": "2a58ed4c-c29f-473e-87a1-f8485e24846c"
+      "id": "785fed19-d3da-4d0b-bdbb-ecee665a66a3"
     },
     {
       "cell_type": "code",
@@ -775,7 +779,7 @@
       "source": [
         "(방법2)"
       ],
-      "id": "e240a8be-e2bd-4195-ad1a-c47f1e076ed1"
+      "id": "17021c57-474d-423d-9854-9ce1dc41c526"
     },
     {
       "cell_type": "code",
@@ -823,7 +827,7 @@
       "source": [
         "`-` 2304 $\\to$ 1 로 차원축소하는 선형레이어를 설계"
       ],
-      "id": "4ff81303-fc40-4226-8f72-708d96e7b882"
+      "id": "f9f06021-9749-40a4-bafa-b42e3ec191bd"
     },
     {
       "cell_type": "code",
@@ -862,7 +866,7 @@
       "source": [
         "`-` 시그모이드"
       ],
-      "id": "e3954287-264a-43d1-ad4b-df707df4721b"
+      "id": "d84a15ce-77bd-43e4-9636-19c94340097b"
     },
     {
       "cell_type": "code",
@@ -917,7 +921,7 @@
         "\n",
         "`-` 네트워크 설계"
       ],
-      "id": "ecc3d71b-a10f-473c-858c-20dbe947917f"
+      "id": "a3e8bad6-70fd-431b-891c-cb12c585a90c"
     },
     {
       "cell_type": "code",
@@ -1012,7 +1016,7 @@
       "source": [
         "# 6. MNIST (GPU)"
       ],
-      "id": "48d65120-2b7f-4404-a2e5-3520d2205015"
+      "id": "1c930dee-5dce-42b3-baa8-e3bd25da13c1"
     },
     {
       "cell_type": "code",
@@ -1230,7 +1234,7 @@
         "`-` 리눅스관련: <https://guebin.github.io/DSTBX2024/> – 자료 부실함..\n",
         "강의영상 없는것 많음.."
       ],
-      "id": "3c75d1e9-e741-4da0-8953-89545b3330dd"
+      "id": "b184804b-9d7d-4d0c-ae86-e383f5f15357"
     }
   ],
   "nbformat": 4,
