--- a/docs/posts/05wk-2.out.ipynb
+++ b/docs/posts/05wk-2.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/05wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "c8f1e228-1575-439d-9daa-29f9fa25e656"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-wjNGgd4gmQJbQ66NLjUC2y&si=dusDZAwGOJS9TOKJ >}}"
-      ],
-      "id": "4642cf89-5814-4fe6-add1-6e4570f9d96c"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-xetJQU7iWPjyBchV8YrWO1&si=Nti_aqqC5fOyNOtP>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "e1549a3a-f8a1-4874-90de-cfbc4d74229b"
+      "id": "558c2f5e-b3ec-4ad6-a728-15afc89ddbfb"
     },
     {
       "cell_type": "code",
@@ -58,7 +42,7 @@
         "\n",
         "`-` download data"
       ],
-      "id": "5a647164-4718-46c6-a73c-a4e975f5d13f"
+      "id": "0e1ef64e-9743-4b59-a317-8765ed6dc3c8"
     },
     {
       "cell_type": "code",
@@ -78,7 +62,7 @@
       "source": [
         "`-` training set"
       ],
-      "id": "fd4d665c-ca39-4b25-86a5-313edb76872b"
+      "id": "655f3a77-9fd9-422a-bf6c-c4f75b3d7ca4"
     },
     {
       "cell_type": "code",
@@ -101,7 +85,7 @@
       "source": [
         "`-` test set"
       ],
-      "id": "3054878a-a124-48e1-abf2-de83c297c796"
+      "id": "baff5f85-065c-408f-a609-982ec9d7f02d"
     },
     {
       "cell_type": "code",
@@ -177,7 +161,7 @@
         "\n",
         "**(예시1)**"
       ],
-      "id": "94b2442f-2aec-4e72-8ce2-634db14ca449"
+      "id": "69353061-7430-42c8-ab9e-768c1ebfe7a0"
     },
     {
       "cell_type": "code",
@@ -237,7 +221,7 @@
       "source": [
         "**(예시2) 평균**"
       ],
-      "id": "aba8820f-7f35-469e-8cb6-b591319449bd"
+      "id": "a1e648b9-d9b5-4413-a492-5d283d86295a"
     },
     {
       "cell_type": "code",
@@ -283,7 +267,7 @@
       "source": [
         "**(예시3) 이동평균?**"
       ],
-      "id": "5f6adb9a-4f44-44d5-a225-d93546aeda45"
+      "id": "988f9c0f-ad72-496e-9dc5-e02d0389db4d"
     },
     {
       "cell_type": "code",
@@ -304,7 +288,7 @@
       "source": [
         "**(예시4) window size가 증가한다면? (2d의 이동평균느낌)**"
       ],
-      "id": "3f40aaec-1855-4d0b-abaf-243da16a5cc7"
+      "id": "1d2ac1f7-6708-417d-88d3-28be32dc8a71"
     },
     {
       "cell_type": "code",
@@ -339,7 +323,7 @@
       "source": [
         "**(예시5)** 2개의 이미지"
       ],
-      "id": "741ebe5e-50f8-4983-93da-6469778a282c"
+      "id": "6d10a93d-2694-4271-987d-741e466a09a9"
     },
     {
       "cell_type": "code",
@@ -374,7 +358,7 @@
       "source": [
         "**(예시6) 피처뻥튀기**"
       ],
-      "id": "46a5d694-8cde-4160-ac90-323108a14c28"
+      "id": "b01ba40f-2dc8-442c-8a55-9371657bacab"
     },
     {
       "cell_type": "code",
@@ -407,7 +391,7 @@
       "source": [
         "## D. `torch.nn.ReLU`"
       ],
-      "id": "75030de5-dffe-4270-a082-e0098e4de314"
+      "id": "febfc5cb-8eaa-44a3-b2e8-a9e2cf9660b7"
     },
     {
       "cell_type": "code",
@@ -429,7 +413,7 @@
       "source": [
         "## E. `torch.nn.MaxPool2d`"
       ],
-      "id": "640ec1bc-6719-4571-9b9f-45ab94275f60"
+      "id": "c439a5f1-def1-4c25-8474-61d079552c10"
     },
     {
       "cell_type": "code",
@@ -451,7 +435,7 @@
       "source": [
         "# 5. MNIST(CPU)"
       ],
-      "id": "ea88ef20-8332-47be-81c8-4b263e961ceb"
+      "id": "c4d40607-0fd9-4f30-ae84-2af88c0d51f3"
     },
     {
       "cell_type": "code",
@@ -471,7 +455,7 @@
       "source": [
         "## A. Conv2d"
       ],
-      "id": "e2759ac0-bd48-406a-968c-7d6374e36aa3"
+      "id": "240d60f1-02d9-4903-81bf-203a0ff9fccd"
     },
     {
       "cell_type": "code",
@@ -502,7 +486,7 @@
       "source": [
         "## B. ReLU"
       ],
-      "id": "ff81f0e0-d687-4172-b46e-ee31fb153ba8"
+      "id": "e565e82c-0fcf-44c2-ad7b-b3234f998da7"
     },
     {
       "cell_type": "code",
@@ -535,7 +519,7 @@
       "source": [
         "## C. MaxPool2D"
       ],
-      "id": "a4f19a49-3e67-435d-a036-0ea7db3120f5"
+      "id": "c93a839b-235c-424e-95fc-2894f9302795"
     },
     {
       "cell_type": "code",
@@ -574,7 +558,7 @@
         "\n",
         "(방법1)"
       ],
-      "id": "e737445f-065c-4f7e-80d8-8e7d220ce1d1"
+      "id": "e98c735f-231c-42fd-89d2-967f5f9d1ecc"
     },
     {
       "cell_type": "code",
@@ -594,7 +578,7 @@
       "source": [
         "(방법2)"
       ],
-      "id": "69ee4981-753c-4861-ac40-b355e23afe31"
+      "id": "bec94330-e740-42d7-849d-56e5f0ffbc1e"
     },
     {
       "cell_type": "code",
@@ -642,7 +626,7 @@
       "source": [
         "`-` 2304 $\\to$ 1 로 차원축소하는 선형레이어를 설계"
       ],
-      "id": "be4850a4-86c1-43ab-b38a-1215958c0067"
+      "id": "7b6abc15-492d-4e28-b5bf-3040cb3c5cd7"
     },
     {
       "cell_type": "code",
@@ -681,7 +665,7 @@
       "source": [
         "`-` 시그모이드"
       ],
-      "id": "5b71aa92-5763-41dd-98d2-4cc879432703"
+      "id": "75d6faa8-df29-4cb2-b487-d7654c18a572"
     },
     {
       "cell_type": "code",
@@ -736,7 +720,7 @@
         "\n",
         "`-` 네트워크 설계"
       ],
-      "id": "1304dc5d-2e8a-467c-b86d-3a4ad88407f4"
+      "id": "337290ed-2703-4590-a22e-61beb5e7825a"
     },
     {
       "cell_type": "code",
@@ -819,7 +803,7 @@
       "source": [
         "# 6. MNIST (GPU)"
       ],
-      "id": "2ca10e27-d743-4e4d-8003-211b5af41e1e"
+      "id": "7f356a67-e153-4d32-a53a-d28ff949ace3"
     },
     {
       "cell_type": "code",
