--- a/docs/posts/05wk-2.out.ipynb
+++ b/docs/posts/05wk-2.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 05wk-2: 합성곱신경망 (1)\n",
+        "# 05wk-2: 합성곱신경망 (1) – CNN 예비학습, MNIST 자료 분석\n",
         "\n",
         "최규빈  \n",
         "2024-04-03\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "79d8fb88-57fd-4301-9e9f-3cd722276557"
+      "id": "f8fdb698-a7eb-47d0-9124-1f1dfd9b03cb"
     },
     {
       "cell_type": "code",
@@ -42,7 +42,7 @@
         "\n",
         "`-` download data"
       ],
-      "id": "559a82f9-6284-4654-a5d3-9a69bd0e96c6"
+      "id": "d36bc08f-911c-4e35-9994-f7d3751de446"
     },
     {
       "cell_type": "code",
@@ -62,7 +62,7 @@
       "source": [
         "`-` training set"
       ],
-      "id": "590ff6e9-5726-40f0-b4f6-fc92f78e646f"
+      "id": "6b3d20c0-6327-486b-b264-083e385d7849"
     },
     {
       "cell_type": "code",
@@ -85,7 +85,7 @@
       "source": [
         "`-` test set"
       ],
-      "id": "385ad070-a63b-41f9-9708-fbf9de3a1956"
+      "id": "666b1fa6-4c21-4fd4-8510-cf9207abcab5"
     },
     {
       "cell_type": "code",
@@ -161,7 +161,7 @@
         "\n",
         "**(예시1)**"
       ],
-      "id": "ac4e65e7-ba19-467b-a7bb-a0b0d4eae76f"
+      "id": "910bd0ab-32f5-4003-b528-5c0edaa11881"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
       "source": [
         "**(예시2) 평균**"
       ],
-      "id": "9eeaf2b2-a8ec-4fe5-b02c-52b6f4790ec7"
+      "id": "7ef936fc-9094-48c7-821d-4181c2bc2eea"
     },
     {
       "cell_type": "code",
@@ -267,7 +267,7 @@
       "source": [
         "**(예시3) 이동평균?**"
       ],
-      "id": "7515b489-84d1-491e-84f5-b15f6e3b7f9c"
+      "id": "44265511-6e04-4c7b-a297-67b4935575a3"
     },
     {
       "cell_type": "code",
@@ -288,7 +288,7 @@
       "source": [
         "**(예시4) window size가 증가한다면? (2d의 이동평균느낌)**"
       ],
-      "id": "9678017a-da6f-466f-b554-18eb5cc92895"
+      "id": "f163cb1c-b78f-4f52-9633-ae89da6b385f"
     },
     {
       "cell_type": "code",
@@ -323,7 +323,7 @@
       "source": [
         "**(예시5)** 2개의 이미지"
       ],
-      "id": "8c0de2da-8e47-4e86-90ae-d8bcc8b79c7d"
+      "id": "8f00e782-3031-475c-887a-870574c27aa1"
     },
     {
       "cell_type": "code",
@@ -358,7 +358,7 @@
       "source": [
         "**(예시6) 피처뻥튀기**"
       ],
-      "id": "9d17ed87-0655-4624-b511-f573a6090214"
+      "id": "0346f050-b830-4839-949e-c690e1b9e459"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
       "source": [
         "## D. `torch.nn.ReLU`"
       ],
-      "id": "d183fb93-6310-4638-962a-e8f288008109"
+      "id": "302dbe9d-9262-464b-b3ab-74dd91f8cd26"
     },
     {
       "cell_type": "code",
@@ -413,7 +413,7 @@
       "source": [
         "## E. `torch.nn.MaxPool2d`"
       ],
-      "id": "fd837522-a4b6-4908-a6e9-8333212f8d6c"
+      "id": "f941a847-88b9-42d6-881d-cccd9741eddb"
     },
     {
       "cell_type": "code",
@@ -435,7 +435,7 @@
       "source": [
         "# 5. MNIST(CPU)"
       ],
-      "id": "e4359271-7e91-4b54-b2e6-7ef30dbe21ca"
+      "id": "4bd17953-ea56-4e9c-b717-dc3ef90145cf"
     },
     {
       "cell_type": "code",
@@ -455,7 +455,7 @@
       "source": [
         "## A. Conv2d"
       ],
-      "id": "324e6559-b04c-45b8-b828-a53b80736137"
+      "id": "4f7cc409-8873-4003-bb34-a6054379489c"
     },
     {
       "cell_type": "code",
@@ -486,7 +486,7 @@
       "source": [
         "## B. ReLU"
       ],
-      "id": "e947b618-fb42-41e0-8c0f-e733e8264b74"
+      "id": "76e6e79a-9259-4da7-94db-62d6caa0f42c"
     },
     {
       "cell_type": "code",
@@ -519,7 +519,7 @@
       "source": [
         "## C. MaxPool2D"
       ],
-      "id": "e7e09cf7-a908-4fe7-a270-c8a641ed7ebb"
+      "id": "534c6f2a-f554-471e-9490-d6c81fda7c78"
     },
     {
       "cell_type": "code",
@@ -558,7 +558,7 @@
         "\n",
         "(방법1)"
       ],
-      "id": "43e3e768-2f0f-4cd3-a328-d191e54fe970"
+      "id": "c5d68625-d71a-40cc-8956-7e7885d747be"
     },
     {
       "cell_type": "code",
@@ -578,7 +578,7 @@
       "source": [
         "(방법2)"
       ],
-      "id": "8a21a065-5c0d-4f92-83fd-6a73e9a32c14"
+      "id": "ce85b603-1e91-4c17-bf53-88473e0147cd"
     },
     {
       "cell_type": "code",
@@ -626,7 +626,7 @@
       "source": [
         "`-` 2304 $\\to$ 1 로 차원축소하는 선형레이어를 설계"
       ],
-      "id": "3d7a6722-40b3-4525-932d-e060211076fa"
+      "id": "139b243d-267d-40d4-9ce0-9cfdde614941"
     },
     {
       "cell_type": "code",
@@ -665,7 +665,7 @@
       "source": [
         "`-` 시그모이드"
       ],
-      "id": "8d9cde70-33d9-4ac1-b569-3932f7171942"
+      "id": "be66557c-2b7c-4253-8631-2236f6743bc5"
     },
     {
       "cell_type": "code",
@@ -720,7 +720,7 @@
         "\n",
         "`-` 네트워크 설계"
       ],
-      "id": "0e756009-8d24-47ba-bf68-600c6de203bb"
+      "id": "77b50f7f-9d14-4db6-8829-273e2d2a4372"
     },
     {
       "cell_type": "code",
@@ -803,7 +803,7 @@
       "source": [
         "# 6. MNIST (GPU)"
       ],
-      "id": "332d27bf-ff7c-4060-81b7-7186877414f9"
+      "id": "5453a0c8-667a-4504-ba49-425383e638b2"
     },
     {
       "cell_type": "code",
@@ -907,7 +907,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.12.2"
     }
   }
 }
